samples/_failures_safe/1761212704_3069f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed59778d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ed59778d.c:185:17: error: expected declaration or statement at end of input
  185 |                 dist[v] = dist[min_index] + graph->adjMatrix[min_index][v];
      |                 ^~~~
./samples/SAFE/__tmp_ed59778d.c:185:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed59778d.c:185:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed59778d.c:185:17: error: expected declaration or statement at end of input
